--- a/package.json
+++ b/package.json
@@ -8,15 +8,37 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "packageManager": "npm@10.5.2",
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom"
+  },
   "dependencies": {
+    "@clerk/nextjs": "^6.1.0",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.11.11",
+    "html-react-parser": "^5.1.18",
+    "lucide-react": "^0.454.0",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.0",
+    "next": "15.0.2",
+    "next-cloudinary": "^6.16.0",
     "react": "19.0.0-rc-02c0e824-20241028",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "react-flagkit": "^2.0.4",
+    "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "eslint-config-next": "15.0.2",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
