--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@clerk/nextjs": "^6.1.0",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
@@ -26,6 +27,7 @@
     "mongoose": "^8.8.0",
     "next": "15.0.2",
     "next-cloudinary": "^6.16.0",
+    "nodemailer": "^6.9.16",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
